concurrency: lab sessions